# carbonic-llvm

./: revert_patches.txt
.github/: CODEOWNERS  new-prs-labeler.yml
.github/workflows/: multi_arch_build_portable_linux_artifacts.yml  test_aomp_smoke.yml
amd/comgr/: CMakeLists.txt
amd/comgr/src/: comgr-compiler.cpp  comgr-hotswap-b0a0.cpp  comgr-hotswap-internal.h  comgr-hotswap-patch-inplace.cpp  comgr-hotswap-patch-trampoline.cpp  comgr-hotswap-patch-wmma-scale16.cpp  comgr-hotswap-patches.def
amd/comgr/src/hotswap/: CMakeLists.txt  README.md  comgr-hotswap-tool-detect.h  comgr-hotswap-tool.cpp
amd/comgr/test/: CMakeLists.txt
amd/comgr/test-lit/: CMakeLists.txt  hotswap-inplace-saddr.s  hotswap-trampoline-ds-nostride64-multi.s  hotswap-trampoline-ds-nostride64.s  hotswap-trampoline-ds2-offset-overflow.s  hotswap-wmma-scale16.s
amd/comgr/test-unit/: CMakeLists.txt  DemangleTest.cpp  HotswapElfTest.cpp  HotswapToolLoaderTest.cpp  HotswapToolTest.cpp  comgr-test-elf-utils.h  common.h
amd/hipcc/src/: hipBin_base.h
clang/: CMakeLists.txt
clang-tools-extra/docs/: conf.py
clang/docs/: LanguageExtensions.rst  ReleaseNotes.rst  index.rst
clang/lib/Basic/: Version.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CGCUDANV.cpp  CGCall.cpp  CGClass.cpp  CGDebugInfo.cpp  CGDebugInfo.h  CGExpr.cpp  CGObjCMac.cpp  CMakeLists.txt  CodeGenAction.cpp  CodeGenFunction.h  CodeGenModule.cpp
clang/lib/Driver/: CMakeLists.txt  Driver.cpp  SanitizerArgs.cpp  ToolChain.cpp
clang/lib/Headers/: opencl-c.h
clang/lib/Lex/: TextEncoding.cpp
clang/lib/Parse/: ParseStmt.cpp
clang/lib/Sema/: OpenCLBuiltins.td  SemaExpr.cpp  SemaOpenMP.cpp
clang/test/: CMakeLists.txt  lit.cfg.py
clang/test/Driver/: cl-x86-flags.c  hip-toolchain-no-rdc.hip  hipspv-toolchain.hip
clang/test/Headers/: __clang_hip_math.hip
clang/test/SemaCXX/: gh196469-default-member-init-lambda-capture.cpp
compiler-rt/lib/asan/: asan_allocator.cpp  asan_allocator.h
compiler-rt/lib/sanitizer_common/: sanitizer_allocator_combined.h  sanitizer_allocator_device.h
flang-rt/: CMakeLists.txt
flang-rt/lib/runtime/: CMakeLists.txt  io-api.cpp  main.cpp  stop.cpp
flang/docs/: Extensions.md
flang/lib/Evaluate/: tools.cpp
flang/lib/Lower/: Bridge.cpp
flang/lib/Semantics/: check-case.cpp  check-omp-structure.cpp  resolve-directives.cpp  resolve-names.cpp
flang/lib/Support/: Fortran-features.cpp
flang/test/: CMakeLists.txt
libcxx/src/: CMakeLists.txt
lld/: CMakeLists.txt
lld/CEX/: ArgumentParser.cpp  ArgumentParser.h  CEXLinkerContext.cpp  CEXLinkerContext.h  CEXLinkerServer.cpp  CEXLinkerServer.h  CMakeLists.txt  CexDriver.cpp  Driver.cpp  Tests.cpp  Tests.h
lld/CEX/LinkerScript/: Lexer.hpp  LinkerScriptReader.hpp  LinkerScriptReference.txt
lld/Common/: DriverDispatcher.cpp
lld/ELF/: Driver.cpp
lld/test/CEX/: identify-magic.test
lld/tools/lld/: CMakeLists.txt  lld.cpp
lld/unittests/AsLibAll/: AllDrivers.cpp  CMakeLists.txt
llvm/docs/: AMDGPUUsage.rst  LangRef.md  LangRef.rst  UserGuides.rst
llvm/include/llvm/: Pass.h
llvm/lib/AsmParser/: LLParser.cpp
llvm/lib/BinaryFormat/: CEX.cpp  CMakeLists.txt  Magic.cpp
llvm/lib/CodeGen/: MachineFunction.cpp  MachineInstr.cpp
llvm/lib/IR/: AutoUpgrade.cpp  DIBuilder.cpp  DebugInfo.cpp  DebugProgramInstruction.cpp  Metadata.cpp  Pass.cpp  Verifier.cpp
llvm/lib/MC/: MCContext.cpp  MCDwarf.cpp  MCObjectFileInfo.cpp  TargetRegistry.cpp
llvm/lib/Object/: Binary.cpp  ObjectFile.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassBuilderPipelines.cpp
llvm/lib/Support/: CommandLine.cpp
llvm/lib/TargetParser/: Host.cpp  Triple.cpp
llvm/runtimes/: CMakeLists.txt
llvm/test/Other/: new-pm-defaults.ll  (+3 more)
offload/test/: lit.cfg
openmp/device/: CMakeLists.txt
(+173 files in other folders)
